# duplicate-detector

./: .cursorrules  .dockerignore  .gitignore  CHANGELOG.md  CLAHE_AB_TEST_GUIDE.md  CLEANUP_COMPLETE.md  CODE_VERIFICATION_REPORT.md  COMPREHENSIVE_TEST_REPORT.md  CONFOCAL_IHC_DEEP_VERIFY_COMPLETE.md  DAILY_WORKFLOW.md  DEPLOYMENT_READY.md  DEPLOYMENT_STATUS.md  DEPLOY_INSTRUCTIONS.txt  DEPLOY_TO_STREAMLIT_CLOUD.md  Dockerfile  Dockerfile.gpu  ENHANCED_TEST_REPORT.md  FIGCHECK_INTEGRATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_COMPLETE.md  Launch_App.command  MEMORY_FIX_COMPLETE.md  MICRO_TILES_QUICK_START.md  MODALITY_ROUTING_COMPLETE.md  PRODUCTION_CHECKLIST.md  PROJECT_CLEANUP_COMPLETE.md  QUICK_DEPLOY_CHECKLIST.md  QUICK_START.md  README.md  STREAMLIT_CLOUD_TROUBLESHOOTING.md  STREAMLIT_LOG_FIX.md  SURGICAL_PATCH_MICRO_TILES_ONLY.txt  TESTING_COMPLETE.md  TEST_REPORT_20251018.md  TROUBLESHOOTING_0_PANELS.md  VALIDATION_GUIDE.md  VALIDATION_TEST_SUMMARY.md  ai_pdf_panel_duplicate_check_AUTO.py  cleanup_project.py  config.example.yaml  (+17 more)
.streamlit/: config.toml
benchmarks/: README.md
clahe_test_results/: synthetic_ab_test_full.json  synthetic_ab_test_stats.json
comprehensive_test_scripts/: 1st  2ed  3rd
docs/: BASELINE_AUDIT.md  COMPREHENSIVE_SUMMARY.md  DEVELOPER.md  DOCKER.md  INTEGRATION_TESTS_SETUP.md  MAIN_PIPELINE_INTEGRATION.md  METHOD.md  MODULES_SUMMARY.md  NEXT_STEPS.md  PERFORMANCE.md  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  REPRODUCIBILITY.md  REST_API.md  USER_GUIDE.md
docs/archive/: COMPLETE_IMPLEMENTATION_SUMMARY.md  CURSOR_QUICK_START.md  DAILY_WORKFLOW.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_DOC54.md  DEPLOYMENT_FINAL.md  DEPLOYMENT_HOTFIX.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_SUCCESS.txt  DEPLOY_INSTRUCTIONS.txt  DEPLOY_NOW.sh  DOCKER_SETUP.md  DOCUMENT_54_FINAL_REPORT.md  ENHANCED_TEST_REPORT.md  ENHANCEMENTS_COMPLETE_SUMMARY.md  (+28 more)
duplicate_detector/: __init__.py
examples/: api_client_example.py  config_examples.py  use_extracted_modules.py
experiments/: README.md
scripts/: deploy_to_github.sh  run_app.sh
src/: ai_pdf_panel_duplicate_check_AUTO.py  streamlit_app.py  tile_detection.py  tile_first_pipeline.py
tests/: conftest.py  test_pipeline_auto.py
tools/: comprehensive_test_runner.py  figcheck_heuristics.py  local_eval_policy.py  local_run_and_score.py  modality_kpi.py  param_grid_sweep.py  run_validation.py  test_clahe_ab.py  test_validation_synthetic.py
validation_real_test/: RUN_METADATA.json  ai_duplicate_report.tsv  final_merged_report.tsv  panel_manifest.tsv  phash_duplicate_report.tsv
(+271 files in other folders)
